FIX: Bets modal was too small on bigger screens

--- a/public/style.css
+++ b/public/style.css
@@ -143,6 +143,12 @@ body {
 	}
 }
 
+@media (min-width: 992px) {
+	.modal-lg,
+	.modal-xl {
+		max-width: 800px;
+	}
+}
 
 /* MUSIC PLAYER */
 
